@@ -23,6 +23,7 @@
 #include <wx/wx.h>
 #include <boost/shared_ptr.hpp>
 #include <boost/weak_ptr.hpp>
+#include "timeline_content_view.h"
 #include "lib/types.h"
 
 class Film;
@@ -33,7 +34,7 @@ public:
 	ContentMenu (wxWindow* p);
 	~ContentMenu ();
 	
-	void popup (boost::weak_ptr<Film>, ContentList, wxPoint);
+	void popup (boost::weak_ptr<Film>, ContentList, TimelineContentViewList, wxPoint);
 
 private:
 	void repeat ();
@@ -49,6 +50,7 @@ private:
 	boost::weak_ptr<Film> _film;
 	wxWindow* _parent;
 	ContentList _content;
+	TimelineContentViewList _views;
 	wxMenuItem* _repeat;
 	wxMenuItem* _join;
 	wxMenuItem* _find_missing;
